fix but with carousel not showing the background pictures

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1,23 +1,3 @@
-@import "/bootstrap/variables";
-@import "bootstrap/variables";
-
-$grid-breakpoints: (
-  xs: 0,
-  sm: 600px,
-  md: 768px,
-  lg: 1024px,
-  xl: 1280px
-);
-
-$container-max-widths: (
-  sm: 600px,
-  md: 768px,
-  lg: 1024px,
-  xl: 1220px
-);
-
-@import "bootstrap";
-
 a {
     text-decoration: none;
 }
@@ -106,7 +86,7 @@ header {
 }
 
 .carousel-inner {
-  height: 700px;
+    height: 700px;
 }
 
 .searchpicture1 {
